client/assets/styles/scss/forms/forms-table-actions.scss
// table actions
.table-actions {
  background: $gray-lightest;
  border: 1px solid $gray-lighter;
  border-bottom: 0;
  border-radius: $input-border-radius $input-border-radius 0 0;
  height: $input-sm;
  overflow: hidden;
  padding: 6px 8px; // 9px - 1px border for alignment
  transition: height .15s ease-in-out;

  &.in {
    height: 80px;
  }

  + .ace-container {
    border-radius: 0 0 $input-border-radius $input-border-radius;

    > .sidebar {
      border-top-left-radius: 0;
    }
  }

  // actions
  > .btn {
    float: left;

    &:active,
    &.active {

      // badge
      .btn-badge {
        background: $purple-light;
      }
    }

    // second action
    + .btn {
      float: right;
    }

    // badge
    .btn-badge {
      background: $gray;
      color: $white;
      font-size: 11px;
      height: 14px;
      line-height: 14px;
      margin-right: 4px;
      padding: 0 2px;
      top: -1px;
    }

    .iconnables {
      width: 14px;
    }

    .icons-sidebar {
      float: left;
      height: 100%;
      margin-right: 6px;
      width: 15px;
    }
  }

  // toggle
  &.table-toggle {
    color: $gray;
    height: auto;
    min-height: 51px;
    overflow: visible;
    padding: 9px 72px 9px 9px;
    position: relative;

    &.in {
      height: 72px;
    }

    // anchor image
    > .iconnables {
      margin-right: 6px;
      width: 18px;
    }

    .small {
      display: block;
      line-height: 1.2;
      margin-left: 24px;
    }

    .toggle-wrapper {
      position: absolute;
      right: 9px;
      top: 9px;

      &.show-icons {
        right: 24px;
      }
    }
  }

  // hostname insert
  .label {
    border: 1px solid $gray-lighter;
    border-radius: $input-border-radius;
    margin-bottom: 0;

    // hostname button
    .btn-sm {
      background: $white;
      border: 0;
      border-left: 1px solid $gray-lighter;
      border-radius: 0;
      border-right: 1px solid $gray-lighter;
      font-size: 14px;
      line-height: 36px;
      padding: 0 24px 0 6px;
      text-align: left;
      width: 100%;

      &:active,
      &.active {
        border-color: $gray-lighter;
      }
    }

    // 3 action thing
    .monospace {
      color: $gray-darker;
      font-size: 14px;
      line-height: 27px;

      &.input {
        border: 0;

        &:focus {
          box-shadow: none;
        }
      }

      &:first-child {
        border-radius: $input-border-radius-xxs 0 0 $input-border-radius-xxs;
        flex: 0 0 90px;
      }

      &:last-child {
        border-radius: 0 $input-border-radius-xxs $input-border-radius-xxs 0;
        flex: 0 0 90px;
      }
    }
  }

  // icons
  .icons-arrow-down {
    color: $gray-light;
    position: absolute;
    right: 6px;
    top: 0;
  }
}

.table-actions-env-vars {
  position: relative;

  // action
  > .btn {
    position: absolute;
    right: 6px;
  }

  .clearfix {
    display: flex;

    + .clearfix {
      margin-top: 6px;
    }
  }

  // key, protocol, port
  .input {
    flex: 0 1 150px;
    padding: 0 9px;

    &:first-child {
      margin-left: -2px;
    }

    &:last-child {
      margin-right: -2px;
    }
  }

  .input-group {
    flex: 1 1 240px;
  }

  .small {
    flex: 1 1 auto;
    line-height: 24px;
    padding-right: 12px;
  }

  // url
  .select-url {
    flex: 1 1 60%;
    font-size: 14px;
    padding-right: 21px;

    .float-left {
      @extend %text-overflow;
      float: none;
    }
  }

  // '=' icon
  .p {
    font-size: 24px;
    padding: 0 6px;
  }

  .p,
  .btn.green,
  .btn.white {
    flex: 0 0 auto;
  }

  .btn + .btn {
    margin-left: 6px;
  }
}

